feat: add admin dashboard CRUD

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -8,7 +8,7 @@
     <div
         class="h-dvh w-dvw grid grid-cols-1 grid-rows-4  px-10 sm:grid-cols-2 sm:grid-rows-3 bg-[url(../../static/images/about.jpg)] bg-center bg-cover bg-no-repeat">
         <div class="text-white col-span-1 row-span-2 place-content-center font-bold  flex flex-col gap-6">
-            <h1 class="text-5xl"> Suit<span class="text-amber-900">Me<span> </h1>
+            <h1 class="text-5xl"> Suit<span class="text-yellow-600">Up<span> </h1>
             <p class="text-lg"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ac ex vel dolor
                 tincidunt vestibulum eu efficitur mauris. aliquet dui. Donec vitae mi odio. Ut mollis iaculis risus quis
                 mattis. Quisque vel libero porttitor, cursus metus a, ultrices ipsum. Praesent in lacus eget quam
