--- a/home/templates/home/contactus.html
+++ b/home/templates/home/contactus.html
@@ -5,7 +5,7 @@
 {% endblock header %}
 
 {% block main %}
-    <div class="h-dvh w-dvw bg-stone-900 flex justify-center items-center">
+    <div class="h-dvh w-dvw flex justify-center items-center">
         <div class="h-full grid grid-rows-3 grid-cols-1 p-10 gap-10
                     sm:grid-rows-1 sm:grid-cols-2 sm:min-h-fit sm:max-h-[600px] sm:border  sm:max-w-screen-lg sm:items-center  sm:shadow-2xl
             ">
@@ -14,7 +14,7 @@
                 ">
                 <h1 class="text-5xl font-bold"> Contact Us </h1>
                 <p class="text-lg tracking-tight"> Feel free to send us a message. we here at <span
-                        class="font-bold">Suit<span class="text-amber-700">Me</span></span> would love to hear your
+                        class="font-bold">Suit<span class="text-yellow-600">Up</span></span> would love to hear your
                     feedback.</p>
             </div>
             <form class="flex flex-col gap-10 row-start-2 row-span-full text-white tacking-tight
@@ -37,7 +37,7 @@
                     here</textarea>
                 </div>
                 <button type="button"
-                    class="w-full rounded-lg bg-orange-900 py-5 hover:cursor-pointer hover:bg-orange-800 transition-all duration-200">
+                    class="w-full rounded-lg bg-yellow-600 py-5 hover:cursor-pointer hover:bg-yellow-800 transition-all duration-200">
                     Send </button>
             </form>
 
