--- a/templates/partials/product.html
+++ b/templates/partials/product.html
@@ -22,4 +22,5 @@
         {% endif %}
         {% endfor %}
     </div>
+    <a href="{% url 'inventory:details' pk=product.id %}">details</a>
 </div>
