feat: add image to product. add filters/search to admin dashboard

--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -5,41 +5,89 @@
 {% endblock header %}
 
 {% block main %}
- <div class="px-40 flex flex-1 justify-center py-5">
-          <div class="layout-content-container flex flex-col max-w-[960px] flex-1">
-            <div class="flex flex-wrap justify-between gap-3 p-4">
-              <p class="text-white tracking-light text-[32px] font-bold leading-tight min-w-72">Products</p>
-              <a href="{% url 'dashboard:create' %}"
-                class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-8 px-4 bg-[#493622] hover:bg-yellow-600 text-white text-sm font-medium leading-normal"
-              >
-                <span class="truncate">Add Product</span>
-              </a>
+<div class="flex flex-wrap justify-between gap-3 p-4">
+    <p class="text-white tracking-light text-[32px] font-bold leading-tight min-w-72">Products</p>
+    <a href="{% url 'dashboard:create' %}"
+       class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-8 px-4 bg-[#493622] hover:bg-yellow-600 text-white text-sm font-medium leading-normal"
+       >
+       <span class="truncate">Add Product</span>
+    </a>
+</div>
+<div class="px-4 py-3">
+    <label class="flex flex-col min-w-40 h-12 w-full">
+        <div class="flex w-full flex-1 items-stretch rounded-xl h-full">
+            <div
+                    class="text-[#beae9d] flex border-none bg-[#40362b] items-center justify-center pl-4 rounded-l-xl border-r-0"
+                    data-icon="MagnifyingGlass"
+                    data-size="24px"
+                    data-weight="regular"
+                    >
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
+                        <path
+                                d="M229.66,218.34l-50.07-50.06a88.11,88.11,0,1,0-11.31,11.31l50.06,50.07a8,8,0,0,0,11.32-11.32ZM40,112a72,72,0,1,1,72,72A72.08,72.08,0,0,1,40,112Z"
+                                ></path>
+                    </svg>
             </div>
-<div class="px-4 py-3 @container">
+            <input
+                    placeholder="Search by name"
+                    class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-white focus:outline-0 focus:ring-0 border-none bg-[#40362b] focus:border-none h-full placeholder:text-[#beae9d] px-4 rounded-l-none border-l-0 pl-2 text-base font-normal leading-normal"
+                    value=""
+                    />
+        </div>
+    </label>
+</div>
+<div class="flex flex-row justify-between px-4">
+    <div class="flex flex-row gap-4">
+        <button class="flex h-8 shrink-0 items-center justify-center gap-x-2 rounded-full bg-[#40362b] pl-4 pr-2">
+            <p class="text-white text-sm font-medium leading-normal">Category</p>
+            <div class="text-white" data-icon="CaretDown" data-size="20px" data-weight="regular">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" fill="currentColor" viewBox="0 0 256 256">
+                    <path d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"></path>
+                </svg>
+            </div>
+        </button>
+        <div class="">
+            <input
+                    placeholder="Limit"
+                    class="min-w-0  overflow-hidden rounded-xl text-white focus:outline-0 focus:ring-0 border-none bg-[#40362b] focus:border-none h-full placeholder:text-[#beae9d] px-4  border-l-0 pl-2 text-base font-normal leading-normal"
+                    value="10"
+                    />
+
+        </div>
+    </div>
+    <div class="">
+        <a href="{% url 'dashboard:create' %}"
+           class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-8 px-4 bg-[#493622] hover:bg-yellow-600 text-white text-sm font-medium leading-normal"
+           >
+           <span class="truncate">Search</span>
+        </a>
+    </div>
+</div>
+<div class="px-4 py-3">
     <div class="flex overflow-hidden rounded-lg border border-[#684d31] bg-[#231a10]">
         <table class="flex-1">
             <thead>
                 <tr class="bg-[#342618]">
                     <th
-                        class="table-60b66f55-2788-4a97-96c2-7ca923375668-column-56 px-4 py-3 text-left text-white w-14 text-sm font-medium leading-normal">
+                        class="px-4 py-3 text-left text-white w-14 text-sm font-medium leading-normal">
                         Product</th>
                     <th
-                        class="table-60b66f55-2788-4a97-96c2-7ca923375668-column-176 px-4 py-3 text-left text-white w-[400px] text-sm font-medium leading-normal">
+                        class="px-4 py-3 text-left text-white w-[400px] text-sm font-medium leading-normal">
                         Name</th>
                     <th
-                        class="table-60b66f55-2788-4a97-96c2-7ca923375668-column-296 px-4 py-3 text-left text-white w-[400px] text-sm font-medium leading-normal">
+                        class="px-4 py-3 text-left text-white w-[400px] text-sm font-medium leading-normal">
                         Description</th>
                     <th
-                        class="table-60b66f55-2788-4a97-96c2-7ca923375668-column-416 px-4 py-3 text-left text-white w-[400px] text-sm font-medium leading-normal">
+                        class="px-4 py-3 text-left text-white w-[400px] text-sm font-medium leading-normal">
                         Price</th>
                     <th
-                        class="table-60b66f55-2788-4a97-96c2-7ca923375668-column-536 px-4 py-3 text-left text-white w-[400px] text-sm font-medium leading-normal">
+                        class="px-4 py-3 text-left text-white w-[400px] text-sm font-medium leading-normal">
                         Size</th>
                     <th
-                        class="table-60b66f55-2788-4a97-96c2-7ca923375668-column-656 px-4 py-3 text-left text-white w-[400px] text-sm font-medium leading-normal">
+                        class="px-4 py-3 text-left text-white w-[400px] text-sm font-medium leading-normal">
                         Material</th>
                     <th
-                        class="table-60b66f55-2788-4a97-96c2-7ca923375668-column-776 px-4 py-3 text-left text-white w-60 text-[#cbad90] text-sm font-medium leading-normal">
+                        class="px-4 py-3 text-left text-white w-60 text-[#cbad90] text-sm font-medium leading-normal">
                         Actions
                     </th>
                 </tr>
@@ -49,30 +97,30 @@
                 {% for product in products %}
                 <tr class="border-t border-t-[#684d31]">
                     <td
-                        class="table-60b66f55-2788-4a97-96c2-7ca923375668-column-56 h-[72px] px-4 py-2 w-14 text-sm font-normal leading-normal">
+                        class="h-[72px] px-4 py-2 w-14 text-sm font-normal leading-normal">
                         <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full w-10"
                             style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBh2tvH4MWf612bfXDFFHzSxWXc7zwb9vtLp6hC6qX9rwP32x7sa_UmS-CwmCSwHe-UUdM8OV6UzrqurHq57bBA4BZ_9HiflpLn9uewLyZgfRH5FC_X0MBPvfxCnmOralONoWhNAeJgSM0gz8KJh3L0C6-VT4NmqMdPdcTCwGARlT7802nLrEOiFWS9rFdIuqiDwKArQc4Y20nbq0_ks4wkFAftd0OfQomoy65pM4lujOCXBpuPMwlepCJj0bjQYvOFpz7WRRkjTc6Q");'>
                         </div>
                     </td>
                     <td
-                        class="table-60b66f55-2788-4a97-96c2-7ca923375668-column-176 h-[72px] px-4 py-2 w-[400px] text-white text-sm font-normal leading-normal">
+                        class="h-[72px] px-4 py-2 w-[400px] text-white text-sm font-normal leading-normal">
                         {{ product.name }}
                     </td>
                     <td
-                        class="table-60b66f55-2788-4a97-96c2-7ca923375668-column-296 h-[72px] px-4 py-2 w-[400px] text-[#cbad90] text-sm font-normal leading-normal">
+                        class="h-[72px] px-4 py-2 w-[400px] text-[#cbad90] text-sm font-normal leading-normal">
                         {{ product.description }}
                     </td>
                     <td
-                        class="table-60b66f55-2788-4a97-96c2-7ca923375668-column-416 h-[72px] px-4 py-2 w-[400px] text-[#cbad90] text-sm font-normal leading-normal">
+                        class="h-[72px] px-4 py-2 w-[400px] text-[#cbad90] text-sm font-normal leading-normal">
                         {{ product.price }}</td>
                     <td
-                        class="table-60b66f55-2788-4a97-96c2-7ca923375668-column-536 h-[72px] px-4 py-2 w-[400px] text-[#cbad90] text-sm font-normal leading-normal">
+                        class="h-[72px] px-4 py-2 w-[400px] text-[#cbad90] text-sm font-normal leading-normal">
                         {{ product.size }}</td>
                     <td
-                        class="table-60b66f55-2788-4a97-96c2-7ca923375668-column-656 h-[72px] px-4 py-2 w-[400px] text-[#cbad90] text-sm font-normal leading-normal">
+                        class="h-[72px] px-4 py-2 w-[400px] text-[#cbad90] text-sm font-normal leading-normal">
                         {{ product.material }}</td>
                     <td
-                        class="table-60b66f55-2788-4a97-96c2-7ca923375668-column-776 h-[72px] px-4 py-2 w-60 text-[#cbad90] text-sm font-bold leading-normal tracking-[0.015em]">
+                        class="h-[72px] px-4 py-2 w-60 text-[#cbad90] text-sm font-bold leading-normal tracking-[0.015em]">
                         <a href="{% url 'inventory:details' pk=product.id %}" class="block hover:text-yellow-600 transition-all duration-200">Details</a>
                         <a href="{% url 'dashboard:update' pk=product.id %}" class="block hover:text-yellow-600 transition-all duration-200">Edit</a>
                         <form action="{% url 'dashboard:delete' pk=product.id %}" method="post" style="display:inline;">
