--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -13,56 +13,53 @@
        <span class="truncate">Add Product</span>
     </a>
 </div>
-<div class="px-4 py-3">
-    <label class="flex flex-col min-w-40 h-12 w-full">
-        <div class="flex w-full flex-1 items-stretch rounded-xl h-full">
-            <div
-                    class="text-[#beae9d] flex border-none bg-[#40362b] items-center justify-center pl-4 rounded-l-xl border-r-0"
-                    data-icon="MagnifyingGlass"
-                    data-size="24px"
-                    data-weight="regular"
-                    >
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
-                        <path
-                                d="M229.66,218.34l-50.07-50.06a88.11,88.11,0,1,0-11.31,11.31l50.06,50.07a8,8,0,0,0,11.32-11.32ZM40,112a72,72,0,1,1,72,72A72.08,72.08,0,0,1,40,112Z"
-                                ></path>
-                    </svg>
-            </div>
-            <input
+<form method="get">
+    <div class="px-4 py-3">
+        <label class="flex flex-col min-w-40 h-12 w-full">
+            <div class="flex w-full flex-1 items-stretch rounded-xl h-full">
+                <div class="text-[#beae9d] flex border-none bg-[#40362b] items-center justify-center pl-4 rounded-l-xl border-r-0">
+                    <!-- SVG Icon -->
+                </div>
+                <input
+                    name="search"
                     placeholder="Search by name"
+                    value="{% if request.GET.search %}{{ request.GET.search }}{% endif %}"
                     class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-white focus:outline-0 focus:ring-0 border-none bg-[#40362b] focus:border-none h-full placeholder:text-[#beae9d] px-4 rounded-l-none border-l-0 pl-2 text-base font-normal leading-normal"
-                    value=""
-                    />
-        </div>
-    </label>
-</div>
-<div class="flex flex-row justify-between px-4">
-    <div class="flex flex-row gap-4">
-        <button class="flex h-8 shrink-0 items-center justify-center gap-x-2 rounded-full bg-[#40362b] pl-4 pr-2">
-            <p class="text-white text-sm font-medium leading-normal">Category</p>
-            <div class="text-white" data-icon="CaretDown" data-size="20px" data-weight="regular">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" fill="currentColor" viewBox="0 0 256 256">
-                    <path d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"></path>
-                </svg>
+                />
             </div>
-        </button>
-        <div class="">
-            <input
-                    placeholder="Limit"
-                    class="min-w-0  overflow-hidden rounded-xl text-white focus:outline-0 focus:ring-0 border-none bg-[#40362b] focus:border-none h-full placeholder:text-[#beae9d] px-4  border-l-0 pl-2 text-base font-normal leading-normal"
-                    value="10"
-                    />
+        </label>
+    </div>
 
+    <div class="flex flex-row justify-between px-4">
+        <div class="flex flex-row gap-4">
+            <select name="tag" class="flex h-8 shrink-0 items-center justify-center gap-x-2 rounded-full bg-[#40362b] pl-4 pr-2 text-white">
+                <option {% if request.GET.tag and request.GET.tag == "Any" %}selected{% endif %} value="Any">Any</option>
+                <option {% if request.GET.tag and request.GET.tag == "Power" %}selected{% endif %} value="Power">Power</option>
+                <option {% if request.GET.tag and request.GET.tag == "Velvet" %}selected{% endif %} value="Velvet">Velvet</option>
+                <option {% if request.GET.tag and request.GET.tag == "Sleek" %}selected{% endif %} value="Sleek">Sleek</option>
+                <option {% if request.GET.tag and request.GET.tag == "Drift" %}selected{% endif %} value="Drift">Drift</option>
+                <option {% if request.GET.tag and request.GET.tag == "Wool" %}selected{% endif %} value="Wool">Wool</option>
+                <option {% if request.GET.tag and request.GET.tag == "Heritage" %}selected{% endif %} value="Heritage">Heritage</option>
+                <option {% if request.GET.tag and request.GET.tag == "Phantom" %}selected{% endif %} value="Phantom">Phantom</option>
+            </select>
+            <select name="limit" class="flex h-8 shrink-0 items-center justify-center gap-x-2 rounded-full bg-[#40362b] pl-4 pr-2 text-white">
+                <option {% if request.GET.limit and request.GET.limit == "5" %}selected{% endif %} value="5">5</option>
+                <option {% if request.GET.limit and request.GET.limit == "10" %}selected{% endif %} value="10">10</option>
+                <option {% if request.GET.limit and request.GET.limit == "20" %}selected{% endif %} value="20">20</option>
+            </select>
+        </div>
+
+        <div>
+            <button type="submit"
+                class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-8 px-4 bg-[#493622] hover:bg-yellow-600 text-white text-sm font-medium leading-normal"
+            >
+                <span class="truncate">Search</span>
+            </button>
         </div>
     </div>
-    <div class="">
-        <a href="{% url 'dashboard:create' %}"
-           class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-8 px-4 bg-[#493622] hover:bg-yellow-600 text-white text-sm font-medium leading-normal"
-           >
-           <span class="truncate">Search</span>
-        </a>
+    <div>
     </div>
-</div>
+</form>
 <div class="px-4 py-3">
     <div class="flex overflow-hidden rounded-lg border border-[#684d31] bg-[#231a10]">
         <table class="flex-1">
@@ -133,5 +130,32 @@
             </tbody>
         </table>
     </div>
+</div>
+
+<div class="flex justify-center mx-6 mt-6 text-white">
+    {% if is_paginated %}
+    <div class="w-1/3 flex flex-row gap-4 justify-end">
+        {% if page_obj.has_previous %}
+            <a href="?{% if request.GET.search %}search={{ request.GET.search }}{% endif %}{% if request.GET.tag %}&tag={{ request.GET.tag }}{% endif %}&{% if request.GET.limit %}limit={{ request.GET.limit }}{% endif %}&page=1" class="px-4 py-2 rounded bg-[#493622] hover:bg-yellow-700"> << </a>
+            <a href="?{% if request.GET.search %}search={{ request.GET.search }}{% endif %}{% if request.GET.tag %}&tag={{ request.GET.tag }}{% endif %}&{% if request.GET.limit %}limit={{ request.GET.limit }}{% endif %}&page={{ page_obj.previous_page_number }}" class="px-4 py-2 rounded bg-[#493622] hover:bg-yellow-700">
+                <
+            </a>
+        {% endif %}
+    </div>
+    <div class="w-1/3 flex flex-row justify-center">
+        <span class="px-4 py-2 bg-[#40362b] rounded">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+        </span>
+    </div>
+    <div class="w-1/3 flex flex-row gap-4 justify-start">
+        {% if page_obj.has_next %}
+            <a href="?{% if request.GET.search %}search={{ request.GET.search }}{% endif %}{% if request.GET.tag %}&tag={{ request.GET.tag }}{% endif %}&{% if request.GET.limit %}limit={{ request.GET.limit }}{% endif %}&page={{ page_obj.next_page_number }}" class="px-4 py-2 rounded bg-[#493622] hover:bg-yellow-700">
+                >
+            </a>
+        <a href="?{% if request.GET.search %}search={{ request.GET.search }}{% endif %}{% if request.GET.tag %}&tag={{ request.GET.tag }}{% endif %}&{% if request.GET.limit %}limit={{ request.GET.limit }}{% endif %}&page={{ page_obj.paginator.num_pages }}" class="px-4 py-2 rounded bg-[#493622] hover:bg-yellow-700"> >> </a>
+        {% endif %}
+    </div>
+    {% endif %}
+
 </div>
 {% endblock main %}
