--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -37,10 +37,12 @@
             class="relative  py-1 px-4 rounded-2xl before:transition-all before:duration-500 before:absolute before:bottom-0  before:h-1 before:w-0 hover:before:w-full before:bg-yellow-600  before:rounded-2xl">
             <a class="text-white text-sm font-medium leading-normal" href="{% url 'home:index' %}">Home</a>
         </div>
+        {% if user.is_authenticated %}
         <div
             class="relative  py-1 px-4 rounded-2xl before:transition-all before:duration-500 before:absolute before:bottom-0  before:h-1 before:w-0 hover:before:w-full before:bg-yellow-600  before:rounded-2xl">
             <a class="text-white text-sm font-medium leading-normal" href="{% url 'dashboard:index' %}">Dashboard</a>
         </div>
+        {% endif %}
         <!-- <div -->
         <!--     class="relative  py-1 px-4 rounded-2xl before:transition-all before:duration-500 before:absolute before:bottom-0  before:h-1 before:w-0 hover:before:w-full before:bg-yellow-600  before:rounded-2xl"> -->
         <!--     <a class="text-white text-sm font-medium leading-normal" href="{% url 'inventory:index' %}">Products</a> -->
@@ -53,6 +55,12 @@
             class="relative  py-1 px-4 rounded-2xl before:transition-all before:duration-500 before:absolute before:bottom-0  before:h-1 before:w-0 hover:before:w-full before:bg-yellow-600  before:rounded-2xl">
             <a class="text-white text-sm font-medium leading-normal" href="{% url 'home:about' %}">About</a>
         </div>
+        <div
+            class="relative  py-1 px-4 rounded-2xl before:transition-all before:duration-500 before:absolute before:bottom-0  before:h-1 before:w-0 hover:before:w-full before:bg-yellow-600  before:rounded-2xl">
+                {% if not user.is_authenticated %}<a class="text-white text-sm font-medium leading-normal" href="{% url 'users:login' %}">Login</a>{% endif %}
+                {% if user.is_authenticated %}<a class="text-white text-sm font-medium leading-normal" href="{% url 'users:logout' %}">Logout</a>{% endif %}
+        </div>
+
         </div>
         <button
                 class="hover:bg-yellow-600 flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 bg-[#493622] text-white gap-2 text-sm font-bold leading-normal tracking-[0.015em] min-w-0 px-2.5"
@@ -65,6 +73,7 @@
                     </svg>
                 </div>
         </button>
+
         <div
                 class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10"
                 style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuB11NtXXsP1dkHm-r-0Tpv7ilQ4NuAUme-rrFBXB4Yua7e6EI_Q2wxkFx_YVEEXoxbPtqMNcJJHVh9Dao9tVkk82fzEKatSWAmSqPRq9999LaHC68q1DoVS4y2NzMWOK03ytZfXmWN5ISdlgw3m4oIO-FeFji_swT4fhmdEwWU4i6rZNCSZaqXvKVCEEs4hkzVmJcGyefNBOWb3ALpc9W6jE29SlQFynw6QcrkDMS8MJ4B8IVR9-AUOAiwzO2Y0t6hGco_t1IKb0OYJ");'
